k8s/app3-new-version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-new-version
  namespace: my-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3-new-version
  template:
    metadata:
      labels:
        app: app3-new-version
    spec:
      containers:
      - name: flask
        image: antonioberben/baggage-demo-app3:0.9-new-version
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: app3-new-version
  namespace: my-system
spec:
  selector:
    app: app3-new-version
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
